--- a/src/app/common/components/Autocomplete.less
+++ b/src/app/common/components/Autocomplete.less
@@ -6,6 +6,9 @@
   position: relative;
 
   .ac-options {
+    max-height: 200px;
+    overflow-y: auto;
+    
     text-align: left;
     position: absolute;
     z-index: 99999999;
